# PacMan

./: AStar_Search.py  README.md  game.py  ghost.py  main.py  search.py  utils.py
Pacman/: game.py
Projet_IA/: game.py  ghost.py  main.py  pacman.py  pyproject (1).toml  pyproject.toml  utils.py
src/: main.py  pacman.py  search.py
