[tool.poetry]
name = "PacMan"
version = "0.1.0"
description = ""
authors = ["Edwige <edwige.loems@ulb.be>", "Axelle <axelle.deghorain@ulb.be>", "Loïc <loic.bermudez.arroyo@ulb.be>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
pygame = ">=2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
